parser/y.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 97)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststat 
	chunk:  chunk1.laststat ';' 
	chunk1:  chunk1.stat 
	chunk1:  chunk1.';' 

	TK_BREAK  shift 7
	TK_DO  shift 10
	TK_FOR  shift 14
	TK_FUNCTION  shift 15
	TK_IF  shift 13
	TK_LOCAL  shift 16
	TK_RETURN  shift 6
	TK_REPEAT  shift 12
	TK_WHILE  shift 11
	TK_NAME  shift 21
	'('  shift 20
	';'  shift 5
	.  reduce 1 (src line 77)

	stat  goto 4
	laststat  goto 3
	varlist  goto 8
	var  goto 17
	prefixexp  goto 9
	functioncall  goto 19
	afunctioncall  goto 18

state 3
	chunk:  chunk1 laststat.    (2)
	chunk:  chunk1 laststat.';' 

	';'  shift 22
	.  reduce 2 (src line 83)


state 4
	chunk1:  chunk1 stat.    (5)

	.  reduce 5 (src line 100)


state 5
	chunk1:  chunk1 ';'.    (6)

	.  reduce 6 (src line 103)


state 6
	laststat:  TK_RETURN.    (24)
	laststat:  TK_RETURN.exprlist 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  reduce 24 (src line 206)

	var  goto 39
	exprlist  goto 23
	expr  goto 24
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 7
	laststat:  TK_BREAK.    (26)

	.  reduce 26 (src line 214)


state 8
	stat:  varlist.'=' exprlist 
	varlist:  varlist.',' var 

	'='  shift 42
	','  shift 43
	.  error


9: shift/reduce conflict (shift 48(0), red'n 9(0)) on '('
state 9
	stat:  prefixexp.    (9)
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TK_NAME 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TK_NAME args 

	TK_STRING  shift 40
	'{'  shift 41
	'('  shift 48
	':'  shift 47
	'.'  shift 45
	'['  shift 44
	.  reduce 9 (src line 117)

	string  goto 50
	args  goto 46
	tableconstructor  goto 49

state 10
	stat:  TK_DO.block TK_END 
	chunk1: .    (4)

	.  reduce 4 (src line 97)

	chunk  goto 52
	chunk1  goto 2
	block  goto 51

state 11
	stat:  TK_WHILE.expr TK_DO block TK_END 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 53
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 12
	stat:  TK_REPEAT.block TK_UNTIL expr 
	chunk1: .    (4)

	.  reduce 4 (src line 97)

	chunk  goto 52
	chunk1  goto 2
	block  goto 54

state 13
	stat:  TK_IF.expr TK_THEN block elseifs TK_END 
	stat:  TK_IF.expr TK_THEN block elseifs TK_ELSE block TK_END 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 55
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 14
	stat:  TK_FOR.TK_NAME '=' expr ',' expr TK_DO block TK_END 
	stat:  TK_FOR.TK_NAME '=' expr ',' expr ',' expr TK_DO block TK_END 
	stat:  TK_FOR.namelist TK_IN exprlist TK_DO block TK_END 

	TK_NAME  shift 56
	.  error

	namelist  goto 57

state 15
	stat:  TK_FUNCTION.funcname funcbody 

	TK_NAME  shift 60
	.  error

	funcname  goto 58
	funcname1  goto 59

state 16
	stat:  TK_LOCAL.TK_FUNCTION TK_NAME funcbody 
	stat:  TK_LOCAL.namelist '=' exprlist 
	stat:  TK_LOCAL.namelist 

	TK_FUNCTION  shift 61
	TK_NAME  shift 63
	.  error

	namelist  goto 62

state 17
	varlist:  var.    (31)
	prefixexp:  var.    (69)

	'='  reduce 31 (src line 241)
	','  reduce 31 (src line 241)
	.  reduce 69 (src line 396)


state 18
	prefixexp:  afunctioncall.    (70)

	.  reduce 70 (src line 399)


state 19
	prefixexp:  functioncall.    (71)

	.  reduce 71 (src line 402)


state 20
	prefixexp:  '('.expr ')' 
	afunctioncall:  '('.functioncall ')' 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 64
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 65
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 21
	var:  TK_NAME.    (33)

	.  reduce 33 (src line 249)


state 22
	chunk:  chunk1 laststat ';'.    (3)

	.  reduce 3 (src line 89)


state 23
	laststat:  TK_RETURN exprlist.    (25)
	exprlist:  exprlist.',' expr 

	','  shift 66
	.  reduce 25 (src line 210)


state 24
	exprlist:  expr.    (38)
	expr:  expr.TK_OR expr 
	expr:  expr.TK_AND expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TK_GE expr 
	expr:  expr.TK_LE expr 
	expr:  expr.TK_EQ expr 
	expr:  expr.TK_NE expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TK_AND  shift 68
	TK_OR  shift 67
	TK_EQ  shift 73
	TK_NE  shift 74
	TK_LE  shift 72
	TK_GE  shift 71
	T2Comma  shift 75
	'>'  shift 69
	'<'  shift 70
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'^'  shift 81
	.  reduce 38 (src line 273)


state 25
	expr:  TK_NIL.    (40)

	.  reduce 40 (src line 281)


state 26
	expr:  TK_FALSE.    (41)

	.  reduce 41 (src line 285)


state 27
	expr:  TK_TRUE.    (42)

	.  reduce 42 (src line 289)


state 28
	expr:  TK_NUMBER.    (43)

	.  reduce 43 (src line 293)


state 29
	expr:  T3Comma.    (44)

	.  reduce 44 (src line 297)


state 30
	expr:  function.    (45)

	.  reduce 45 (src line 301)


31: shift/reduce conflict (shift 48(0), red'n 46(0)) on '('
state 31
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TK_NAME 
	expr:  prefixexp.    (46)
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TK_NAME args 

	TK_STRING  shift 40
	'{'  shift 41
	'('  shift 48
	':'  shift 47
	'.'  shift 45
	'['  shift 44
	.  reduce 46 (src line 304)

	string  goto 50
	args  goto 46
	tableconstructor  goto 49

state 32
	expr:  string.    (47)

	.  reduce 47 (src line 307)


state 33
	expr:  tableconstructor.    (48)

	.  reduce 48 (src line 310)


state 34
	expr:  '-'.expr 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 82
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 35
	expr:  TK_NOT.expr 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 83
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 36
	expr:  '#'.expr 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 84
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 37
	expr:  TK_SHORTCOMMENT.    (67)

	.  reduce 67 (src line 385)


state 38
	function:  TK_FUNCTION.funcbody 

	'('  shift 86
	.  error

	funcbody  goto 85

state 39
	prefixexp:  var.    (69)

	.  reduce 69 (src line 396)


state 40
	string:  TK_STRING.    (68)

	.  reduce 68 (src line 390)


state 41
	tableconstructor:  '{'.'}' 
	tableconstructor:  '{'.fieldlist '}' 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 90
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'['  shift 91
	'#'  shift 36
	'}'  shift 87
	.  error

	var  goto 39
	expr  goto 92
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33
	fieldlist  goto 88
	field  goto 89

state 42
	stat:  varlist '='.exprlist 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	exprlist  goto 93
	expr  goto 24
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 43
	varlist:  varlist ','.var 

	TK_NAME  shift 21
	'('  shift 20
	.  error

	var  goto 94
	prefixexp  goto 95
	functioncall  goto 19
	afunctioncall  goto 18

state 44
	var:  prefixexp '['.expr ']' 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	.  error

	var  goto 39
	expr  goto 96
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 45
	var:  prefixexp '.'.TK_NAME 

	TK_NAME  shift 97
	.  error


state 46
	functioncall:  prefixexp args.    (74)

	.  reduce 74 (src line 417)


state 47
	functioncall:  prefixexp ':'.TK_NAME args 

	TK_NAME  shift 98
	.  error


state 48
	args:  '('.')' 
	args:  '('.exprlist ')' 

	TK_FALSE  shift 26
	TK_FUNCTION  shift 38
	TK_NIL  shift 25
	TK_NOT  shift 35
	TK_TRUE  shift 27
	TK_SHORTCOMMENT  shift 37
	TK_NAME  shift 21
	TK_NUMBER  shift 28
	TK_STRING  shift 40
	T3Comma  shift 29
	'{'  shift 41
	'('  shift 20
	'-'  shift 34
	'#'  shift 36
	')'  shift 99
	.  error

	var  goto 39
	exprlist  goto 100
	expr  goto 24
	string  goto 32
	prefixexp  goto 31
	functioncall  goto 19
	afunctioncall  goto 18
	function  goto 30
	tableconstructor  goto 33

state 49
	args:  tableconstructor.    (78)

	.  reduce 78 (src line 439)


state 50
	args:  string.    (79)

	.  reduce 79 (src line 442)


state 51
	stat:  TK_DO block.TK_END 

	TK_END  shift 101
	.  error


state 52
	block:  chunk.    (7)

	.  reduce 7 (src line 108)


state 53
	stat:  TK_WHILE expr.TK_DO block TK_END 
	expr:  expr.TK_OR expr 
	expr:  expr.TK_AND expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TK_GE expr 
	expr:  expr.TK_LE expr 
	expr:  expr.TK_EQ expr 
	expr:  expr.TK_NE expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TK_AND  shift 68
	TK_DO  shift 102
	TK_OR  shift 67
	TK_EQ  shift 73
	TK_NE  shift 74
	TK_LE  shift 72
	TK_GE  shift 71
	T2Comma  shift 75
	'>'  shift 69
	'<'  shift 70
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'^'  shift 81
	.  error


state 54
	stat:  TK_REPEAT block.TK_UNTIL expr 

	TK_UNTIL  shift 103
	.  error

